[package]
name = "tree-migration-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-migration = { git = "https://github.com/alphalpha/tree-migration.git" }
async-std = "1.12.0"
confy = "0.5.1"
conv = "0.3.3"
egui = "0.23.0"
egui_extras = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
env_logger = "0.10.1"
log = "0.4.20"
rusttype = "0.9.3"
serde_derive = "1.0.192"
serde = { version = "1.0.192", features = ["derive"] }

[build]
rustflags = ["-C", "target-feature=-crt-static"]
